openshift-crc/viewer/viewer-deployement.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  viewer
  namespace: dep-graph
  labels:
    app:  dependencies-graph-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  dependencies-graph-viewer
  template:
    metadata:
      labels:
        app:  dependencies-graph-viewer
    spec:
      serviceAccountName: useroot
      containers:
      - name:  dependencies-graph-viewer
        image: ghcr.io/xclemence/dependencies-graph-viewer:2.1.1
        ports:
        - containerPort: 80
          protocol: TCP
