openshift-crc/viewer/viewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewer-service
  namespace: dep-graph
  labels:
    app:  dependencies-graph-viewer
spec:
  selector:
    app: dependencies-graph-viewer
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
